--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -42,7 +42,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "org.igniterealtime.smack:smack-tcp:4.4.6"
+    //Smack Library
     implementation "org.igniterealtime.smack:smack-experimental:4.4.6"
-    implementation "org.igniterealtime.smack:smack-android:4.4.6"
+    implementation "org.igniterealtime.smack:smack-android-extensions:4.4.0"
+    implementation "org.igniterealtime.smack:smack-tcp:4.4.6"
+}
+
+configurations {
+    all*.exclude group: 'xpp3', module: 'xpp3'
+    all*.exclude group: 'xpp3', module: 'xpp3_min'
 }
